@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.1:
+  ADD: DCOP call to switch Random Mode on or off. (BR 84460)
   ADD: DCOP call to retrieve current track's cover image. (BR 85364)
   FIX: Problem with cover-saving for certain artist/album names. (BR 84171)
   FIX: Show contextual information for songs, even if they are not in the
